# deepiri-gpu-utils

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml
examples/: README.md  cyrex-gpu.fragment.yml
src/deepiri_gpu_utils/: __init__.py  build_args.py  cli.py  detect.py  doctor.py  ollama.py  setup.py  system_info.py  torch_device.py
tests/: test_build_args.py  test_cli_stub.py  test_detect.py  test_doctor_setup_torch.py  test_ollama_tiers.py
